# $Id$

Griffith ChangeLog
------------------
(c) 2005-2008  Vasco Nunes, Piotr Ożarowski


2008-12-16  Piotr Ożarowski
	* Reload movie plugin each time search is performed (in --debug mode only, this should ease writing plugins)
	* Canceling search doesn't throw exception anymore (closes 100038)

2008-12-07  Piotr Ożarowski
	* update_image(): update the md5 *after* all other queries (so that UPDATE will not be invoked)

2008-12-07  Piotr Ożarowski
	* CSFD movie plugin updated (thanks to Aleš Nejdr)

2008-12-03  Piotr Ożarowski
	* Add few indexes to the model

2008-12-01  Piotr Ożarowski
	* HTML export plugin exports posters again (closes: 304072)

2008-11-30  Piotr Ożarowski
	* CSFD movie plugin updated (thanks to Otakar)

2008-11-25  Michael Jahn
	* fixed some amazon and unicode errors

2008-11-22  Michael Jahn
	* use unicode for fetched html pages in general
	* fixed rating, runtime and year are not shown with MySQL backend

2008-11-10  Michael Jahn
	* optimized windows setup related code, added links to documentation files, forum and wiki to the installer

2008-11-18  Piotr Ożarowski
	* Version changed to 0.10-beta2~svn
	* command line's search fixed

---- 0.10-beta1 ---

2008-11-17  Piotr Ożarowski
	* Add --version/-v command line options
	* Add bash completion script
	* Version changed to 0.10-beta1
	* Update Polish translation

2008-11-16  Piotr Ożarowski
	* fail if database requires newer Griffith version
	* Rename backup/restore menu items
	* Warn about developement version only once
	  + home / config/ posters directory detected before initializing Griffith

2008-11-15  Piotr Ożarowski
	* Export plugins are now exporting movies listed in main window
	* Replace "by ..." quick filter combo boxes with saved search conditions

2008-11-13  Piotr Ożarowski
	* update translations
	* sync with 0.9.x branch

2008-11-10  Michael Jahn
	* updated plugins IMDB-de, Amazon, Kino.de, FilmeVonAZ

2008-11-01  Michael Jahn
	* updated IMDB plugin

2008-10-26  Michael Jahn