@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2008  Vasco Nunes, Piotr Ożarowski
 
 
+2008-12-16  Michael Jahn
+	* IMDB movie plugin updated
+
 2008-12-16  Piotr Ożarowski
 	* Reload movie plugin each time search is performed (in --debug mode only, this should ease writing plugins)
 	* Canceling search doesn't throw exception anymore (closes 100038)
